--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Test</h1>
+   <!--  <h1>Test</h1> -->
 
     <!--<div class="Test">Yes</div>-->
 
-    <button onClick="reply_click(this.id)" id="count">Count</button>
+  <!--   <button onClick="reply_click(this.id)" id="count">Count</button>
+    <br>
+    <br>
+    <img src="images/206854.png" width="100px" height="100px">
+    <br>
+    <button onClick="new_worker" id="newWorker">New Worker</button> -->
 
+    <canvas id="canvas"></canvas>
     <script src="app.js"></script>
+    <script src="display.js"></script>
+   <!--  <script src="movement.js"></script> -->
 
 </body>
 </html>
